// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render-state preset snapshots > produces a stable render-state snapshot for Cosmic Plasma 1`] = `
{
  "bloom": 0.25,
  "blur": 0.05,
  "chroma": 0.15,
  "crystalEnabled": false,
  "crystalOpacity": 0.85,
  "effectsEnabled": true,
  "feedback": 0.1,
  "glyphEnabled": false,
  "glyphOpacity": 0.8,
  "inkEnabled": false,
  "inkOpacity": 0.85,
  "kaleidoscope": 0.2,
  "origamiEnabled": false,
  "origamiOpacity": 0.85,
  "oscilloEnabled": false,
  "oscilloOpacity": 0.85,
  "particleDensity": 0.55,
  "particleGlow": 0.8,
  "particleSize": 0.5,
  "particleSpeed": 0.35,
  "particlesEnabled": true,
  "persistence": 0.25,
  "plasmaEnabled": true,
  "plasmaOpacity": 0.95,
  "portalEnabled": false,
  "portalOpacity": 0.85,
  "posterize": 0.1,
  "sdfEdge": 0.06,
  "sdfEnabled": false,
  "sdfFill": 0.4,
  "sdfGlow": 0.65,
  "sdfRotation": 0.2,
  "sdfScale": 0.55,
  "sdfScenePresent": false,
  "spectrumEnabled": true,
  "spectrumOpacity": 1,
  "topoEnabled": false,
  "topoOpacity": 0.85,
  "weatherEnabled": false,
  "weatherOpacity": 0.85,
}
`;

exports[`render-state preset snapshots > produces a stable render-state snapshot for Glyph Matrix 1`] = `
{
  "bloom": 0.25,
  "blur": 0.05,
  "chroma": 0.15,
  "crystalEnabled": false,
  "crystalOpacity": 0.85,
  "effectsEnabled": true,
  "feedback": 0.1,
  "glyphEnabled": true,
  "glyphOpacity": 1,
  "inkEnabled": false,
  "inkOpacity": 0.85,
  "kaleidoscope": 0.2,
  "origamiEnabled": false,
  "origamiOpacity": 0.85,
  "oscilloEnabled": false,
  "oscilloOpacity": 0.85,
  "particleDensity": 0.55,
  "particleGlow": 0.8,
  "particleSize": 0.5,
  "particleSpeed": 0.35,
  "particlesEnabled": true,
  "persistence": 0.25,
  "plasmaEnabled": false,
  "plasmaOpacity": 0.75,
  "portalEnabled": false,
  "portalOpacity": 0.85,
  "posterize": 0.1,
  "sdfEdge": 0.06,
  "sdfEnabled": false,
  "sdfFill": 0.4,
  "sdfGlow": 0.65,
  "sdfRotation": 0.2,
  "sdfScale": 0.55,
  "sdfScenePresent": false,
  "spectrumEnabled": false,
  "spectrumOpacity": 0.75,
  "topoEnabled": false,
  "topoOpacity": 0.85,
  "weatherEnabled": false,
  "weatherOpacity": 0.85,
}
`;
